[package]
name = "parse_adsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
mysql = "25.0.0"
sqlx = {version = "0.7.4", default-features = false, features = ["runtime-async-std", "macros", "mysql", "time"]}
time = "0.3.34"
async-std = "1.12.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
flate2 = "1.0"
